code25_all/scala/9429216.txt
println(abc.foldRight(0)((a,b) => math.max(a.length,b)))

object Main {
  def main(args : Array[String]) {
    val abc = Array[String]("a","abc","erfgg","r")
    println(abc.foldRight(0)((a,b) => math.max(a.length,b)))
  }
}

println(abc.foldRight(0)(math.max(_.length,_)))

scala
/path/to/Main.scala:4: error: wrong number of parameters; expected = 2
    println(abc.foldRight(0)(math.max(_.length,_)))
                                     ^
one error found

abc.map(_.length)
